Searchview now put in actionbar, also fixed bug with not refreshing serach list whem backspaced

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+
+                <meta-data
+                    android:name="android.app.searchable"
+                    android:resource="@xml/searchable">
+                </meta-data>
             </intent-filter>
         </activity>
     </application>
